--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.0",
+    "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
