--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,18 +18,23 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.0",
-    "dotenv": "^16.4.5",
+    "crypto-browserify": "^3.12.0",
+    "dotenv-expand": "^11.0.6",
     "jwt-decode": "^4.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
     "typescript": "^4.9.5",
+    "uninstall": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
